Added: TPTP support

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,6 +20,7 @@
 	<string name="drspp">drspp</string>
 	<string name="paraphrase">paraphrase</string>
 	<string name="owlfsspp">owlfsspp</string>
+	<string name="tptp">tptp</string>
 	<string name="syntaxpp">syntaxpp</string>
 	
 	<string name="settings">Settings</string>	
